--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 .navbar-default {
     border: none !important;
-    background-color: #23282d !important;
+    background-color: transparent !important;
     color: white !important;
     font-size: 1.5vw;
     transition: font-size 1s;
@@ -12,6 +12,11 @@ body {
 
 .navbar-default a {
     color: white !important;
+}
+
+.navbar-default a:hover {
+    background-color: #ffffff;
+    opacity: 0.3;
 }
 
 .navbar-brand {
@@ -31,6 +36,7 @@ body {
 
 .navbar-default.affix {
     font-size: 1vw;
+    background-color: #23282d !important;
     /* Add additional styles here for the COLLAPSED state */
 }
 
@@ -149,6 +155,15 @@ body {
 .portfolio_padding {
     padding-right: 2vw !important;
     padding-left: 2vw !important;
+}
+
+.btn-light {
+    transition: opacity 0.2s;
+}
+
+.btn-light:hover {
+    background-color: #ffffff;
+    opacity: 0.5;
 }
 
 .cirkel {
