--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
 
 .splashbillede {
     padding: 0 !important;
-    background-image: url(img/skrivebord_billede3.png);
+    background-image: url(img/skrivebord_billede3.jpg);
     width: 100vw;
     height: 52vw;
     background-repeat: no-repeat;
