--- a/style.css
+++ b/style.css
@@ -2,13 +2,14 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:800i|Poppins:300,500,500i,600,700');
 body {
     background-color: #202429 !important;
+    padding-bottom: 3rem;
 }
 
 p {
     font-family: 'poppins', sans-serif;
     font-weight: 500;
-    line-height: 2rem;
-    font-size: 1.7rem;
+    font-size: 1rem;
+    color: white;
 }
 
 li {
@@ -22,15 +23,19 @@ a {
 }
 
 h1 {
-    font-size: 3.998em !important;
+    font-size: 3.998rem !important;
+}
+
+h2 {
+    font-size: 3rem !important;
 }
 
 h3 {
-    font-size: 1.999em !important;
+    font-size: 1.999rem !important;
 }
 
 h4 {
-    font-size: 1.414em !important;
+    font-size: 1.414rem !important;
 }
 
 h1,
@@ -38,94 +43,53 @@ h2,
 h3,
 h4,
 h5,
-h6,
-h7,
-h8 {
+h6 {
     font-family: 'Montserrat', 'sans-serif' !important;
     font-weight: 400;
-}
-
-.navbar-default {
-    border: none !important;
-    background-color: transparent !important;
-    color: white !important;
-    font-size: 2em;
-    transition: all 1s;
-}
-
-.navbar-default a {
-    color: white !important;
-    font-family: 'Montserrat', 'sans-serif' !important;
-    font-weight: 400;
-}
-
-.navbar-default a:hover {
-    background-color: #ffffff;
-    opacity: 0.3;
-}
-
-.navbar-brand {
-    font-size: 1.5vw !important;
-    transition: font-size 1s;
-    padding-top: 5px !important;
-    padding-bottom: 5px !important;
-}
-
-.logo_menubar {
-    transition: width 1s;
-}
-
-.navbar-brand.affix {
-    font-size: 1vw !important;
-}
-
-.navbar-default.affix {
-    font-size: 1.7em;
-    background-color: #23282d !important;
-    /* Add additional styles here for the COLLAPSED state */
-}
-
-.logo_menubar.affix {
-    width: 30px !important;
-    z-index: 100;
-}
-
-.navbar-default .navbar-nav > li > .affix {
     color: white;
-    margin-left: 2vw;
 }
 
-.navbar-default .navbar-toggle .icon-bar {
-    background-color: white !important;
+/* Bootstrap custom classes */
+.w-30 {
+    width: 30%;
 }
 
-.linkedin {
-    padding-bottom: 5px !important;
-    padding-top: 5px !important;
-    margin-right: 2vw;
-    transition: opacity 1s;
+
+/* Nav */
+nav {
+    position: absolute !important;
+    top: 0px;
+    z-index: 2;
+    width: 100%;
 }
 
-.linkedin:hover {
-    background-color: #ffffff;
-    opacity: 0.5;
+.nav-item a{
+    color: white !important;
+    font-family: 'Montserrat', 'sans-serif' !important;
+    font-weight: 400;
+    font-size: 1.5rem;
+    padding: 0px 1.2rem !important;
+}
+
+.nav-item a:hover {
+    color: #ffb836 !important;
 }
 
 .splashbillede {
     padding: 0 !important;
     background-image: url(img/skrivebord_billede3.jpg);
-    width: 98vw;
-    height: 52vw;
+    width: 100%;
+    height: 40vw;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    margin-bottom: 2vw;
+    margin: 0;
 }
 
 .typing_carousel {
     position: absolute;
     color: white;
-    font-size: 5em !important;
+    font-size: 3rem !important;
     font-weight: bold;
     width: 100%;
     top: 50%;
@@ -203,315 +167,41 @@ h8 {
     margin-top: 1vw;
 }
 
-.MMD_arbejde li {
-    font-size: 1.7rem;
-}
-
-.skills_sprog li {
-    font-size: 1.7rem;
-}
-
 .cirkel {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    font-size: 1.7em;
+    border-radius: 5px;
+    font-size: 1.2em;
     color: black;
-    line-height: 150px;
     text-align: center;
     background: #566a62;
     font-family: 'Montserrat', 'sans-serif' !important;
     font-weight: 400;
+    margin: 0px 0px 15px;
 }
 
-.cirkel_udd {
-    width: 200px;
-    height: 150px;
-    border-radius: 50%;
-    font-size: 1.7em;
+.cirkel h5 {
+    padding: 10px 10px;
+}
+
+
+/*Project */
+
+/*Kontakt */
+
+#kontakt p, #kontakt h3, #kontakt h2, #kontakt h4 {
     color: black;
-    line-height: 150px;
-    text-align: center;
-    background: #566a62;
-    font-family: 'Montserrat', 'sans-serif' !important;
-    font-weight: 400;
 }
 
-.cirkel_erhverv {
-    width: 250px;
-    height: 150px;
-    border-radius: 50%;
-    font-size: 1.7em;
-    color: black;
-    line-height: 150px;
-    text-align: center;
-    background: #566a62;
-    font-family: 'Montserrat', 'sans-serif' !important;
-    font-weight: 400;
+.boxRectangel {
+    height: 2rem; 
+    background-color:#566b62
 }
 
-@media screen and (max-width: 1536px) {
-    .typing_carousel {
-        font-size: 4.5em !important;
-        padding-left: 10%;
-
-    }
+#kontakt li {
+    font-size: 1.2rem;
 }
 
-@media screen and (max-width: 1300px) {
-    .typing_carousel {
-        font-size: 3.5em !important;
-        padding-left: 13%;
-
-
-    }
-}
-
-@media screen and (max-width: 1199px) {
-    .skrivebord2 {
-        margin-top: 5% !important;
-        display: block !important;
-    }
-}
-
-@media screen and (max-width: 1024px) {
-    /* Københavnerture - forside start */
-    h3 {
-        font-size: 2.2em !important;
-    }
-    .titel_portfolio {
-        color: white;
-        margin-top: 1.5vw;
-        font-size: 1.7em !important;
-    }
-    .FrontEnd_Design_beskrivelse li {
-        font-size: 1.5em !important;
-        line-height: 3rem;
-    }
-    .hojre_design_diagram {
-        float: left;
-    }
-    .omMig_h2 {
-        font-size: 1.5em !important;
-    }
-    .typing_carousel {
-        font-size: 3.2em !important;
-        padding-left: 8%;
-
-    }
-
-    .cirkel {
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-        font-size: 1.2em;
-        color: black;
-        line-height: 150px;
-        text-align: center;
-        background: #566a62;
-        font-family: 'Montserrat', 'sans-serif' !important;
-        font-weight: 400;
-    }
-    .cirkel_udd {
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-        font-size: 1.2em;
-        color: black;
-        line-height: 150px;
-        text-align: center;
-        background: #566a62;
-        font-family: 'Montserrat', 'sans-serif' !important;
-        font-weight: 400;
-    }
-    .cirkel_erhverv {
-        width: 170px;
-        height: 150px;
-        border-radius: 50%;
-        font-size: 1.2em;
-        color: black;
-        line-height: 150px;
-        text-align: center;
-        background: #566a62;
-        font-family: 'Montserrat', 'sans-serif' !important;
-        font-weight: 400;
-    }
-    /* Københavnerture - forside slut */
-    .box_om {
-        margin-bottom: 2vw;
-        margin-top: 2vw;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    /* Københavnerture - forside start */
-    h3 {
-        font-size: 1.5em !important;
-    }
-    p {
-        font-size: 1.3rem;
-    }
-
-    .navbar-default {
-        border: none !important;
-        background-color: transparent !important;
-        color: white !important;
-        font-size: 2em;
-        transition: all 1s;
-        background-color: #23282d !important;
-    }
-
-    .linkedin {
-        display: none !important;
-    }
-
-    .FrontEnd_Design_beskrivelse li {
-        font-size: 1.5em !important;
-        line-height: 3rem;
-    }
-    .hojre_design_diagram {
-        float: left;
-    }
-
-    .splashbillede {
-        width: 97.5vw;
-    }
-
-    .skrivebord2 {
-        display: none !important;
-    }
-
-    .omMig_h2 {
-        font-size: 1.5em !important;
-    }
-    .typing_carousel {
-        font-size: 2.5em !important;
-        padding-left: 6%;
-    }
-
-    .MMD_arbejde li {
-        font-size: 1.3rem;
-    }
-    .skills_sprog li {
-        font-size: 1.3rem;
-    }
-    .cirkel {
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-        font-size: 1.2em;
-        color: black;
-        line-height: 150px;
-        text-align: center;
-        background: #566a62;
-        font-family: 'Montserrat', 'sans-serif' !important;
-        font-weight: 400;
-    }
-    .cirkel_udd {
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-        font-size: 1.2em;
-        color: black;
-        line-height: 150px;
-        text-align: center;
-        background: #566a62;
-        font-family: 'Montserrat', 'sans-serif' !important;
-        font-weight: 400;
-    }
-    .cirkel_erhverv {
-        width: 170px;
-        height: 150px;
-        border-radius: 50%;
-        font-size: 1.2em;
-        color: black;
-        line-height: 150px;
-        text-align: center;
-        background: #566a62;
-        font-family: 'Montserrat', 'sans-serif' !important;
-        font-weight: 400;
-    }
-    /* Københavnerture - forside slut */
-}
-
-@media screen and (max-width: 655px) {
-    .splashbillede {
-        width: 96.5vw;
-    }
-
-    .typing_carousel {
-        font-size: 2.5em !important;
-        padding-left: 8%;
-    }
+.wrapper_om {
+    padding: 10px 20px;
 }
 
 
-@media screen and (max-width: 415px) {
-    /* Københavnerture - forside start */
-    .splashbillede {
-        width: 96vw;
-    }
-    p {
-        font-size: 1.7rem;
-    }
-    .titel_portfolio {
-        color: white;
-        margin-top: 1.5vw;
-        font-size: 1.3em !important;
-    }
-    .MMD_arbejde li {
-        font-size: 1.7rem;
-    }
-    .skills_sprog li {
-        font-size: 1.7rem;
-    }
-    .mobiltLosning_margin {
-        margin-bottom: 4vw;
-    }
-    .typing_carousel {
-        font-size: 1.3em !important;
-
-    }
-    .omMig_h2 {
-        font-size: 1.7em !important;
-    }
-
-    .skrivebord2 {
-        display: none !important;
-    }
-
-    .FrontEnd_Design_beskrivelse li {
-        font-size: 1.5em !important;
-        line-height: 3rem;
-    }
-    .hojre_design_diagram {
-        float: left;
-    }
-
-    .cirkel {
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-        font-size: 1.7em;
-        color: black;
-        line-height: 150px;
-        text-align: center;
-    }
-    .cirkel_udd {
-        width: 200px;
-        height: 150px;
-        border-radius: 50%;
-        font-size: 1.7em;
-        color: black;
-        line-height: 150px;
-    }
-    .cirkel_erhverv {
-        width: 250px;
-        height: 150px;
-        border-radius: 50%;
-        font-size: 1.7em;
-        color: black;
-        line-height: 150px;
-    }
-    /* Københavnerture - forside slut */
-}
