--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a {
 }
 
 h1 {
-    font-size: 3.998rem !important;
+    font-size: 3rem !important;
 }
 
 h2 {
@@ -107,18 +107,6 @@ nav {
     display: none !important;
 }
 
-.FrontEnd_Design_beskrivelse li {
-    font-size: 1vw;
-}
-
-.hojre_design_diagram {
-    float: right;
-}
-
-.runde_kanter {
-    border-radius: 0.5vw;
-}
-
 .portfolio_venstre {
     transition: opacity 1s;
 }
@@ -150,6 +138,8 @@ nav {
     margin: 0px;
     font-size: 1.7rem !important;
     border-radius: 0px 0px 10px 10px;
+    box-shadow: 0px 5px 5px 0px #000000;
+    transition: 0.5s all;
 }
 
 .titel_portfolio:hover {
@@ -171,8 +161,16 @@ nav {
     opacity: 0.5;
 }
 
-.lukke_knap {
-    margin-top: 1vw;
+.btn-white {
+    background-color: #ffffff;
+    color: #000000 !important;
+    transition: 0.5s all;
+    font-size: 1.2rem;
+}
+
+.btn-white:hover {
+    background-color: #66696d;
+    color: white !important;
 }
 
 .cirkel {
@@ -240,4 +238,42 @@ nav {
     padding: 10px 20px;
 }
 
+
+/* Project site*/
+
+.splashInfo > div {
+    padding: 1rem;
+    font-size: 1.5rem;
+}
+
+.splashInfo > div:nth-child(2) {
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+}
+
+#projectSideImg {
+    height: 100px;
+    object-fit: cover;
+    object-position: top;
+}
+
+.projectOverlay {
+    padding: 1rem 6rem;
+    background-color: #747474ba;
+    border-radius: 10px;
+}
+
+@media screen and (max-width: 768px) {
+    .splashInfo > div:nth-child(2) {
+        padding: 0.1rem;
+        border-top: 2px solid black;
+        border-bottom: 2px solid black;
+        border-left: 0px solid black;
+        border-right: 0px solid black;
+    }
+
+    .splashInfo > div {
+        padding: 0.3rem;
+    }
+  }
 
